--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 # User config
-author: "Pineapple"
-tagline: "Pineapple Certfied Jekyll Theme"
-description: "In 1493, explorer Christopher Columbus found pineapples on Guadeloupe Island in the Caribbean. Pineapple on pizza soon followed..."
-keywords: "Pineapple, Pineapple Pizza, Pineapple House"
-email: "pineapple@example.com"
-linkedin: "https://www.linkedin.com/"
-twitter: "https://twitter.com/"
-github: "https://github.com/"
+author: "Shirley Xiao"
+tagline: "Shirley Xiao"
+description: "Hi, I'm"
+keywords: "Shirley, Shirley Xiao, Xiao, Berkeley, Computer Science, CS, Cal, UC Berkeley, UCB, Software, Software Engineer, Software Developer"
+email: "stxiao@berkeley.edu"
+linkedin: "https://www.linkedin.com/in/s-xiao"
+github: "https://github.com/shirleytxiao/"
 
 # Site config
-baseurl: "/pineapple"
+baseurl: ""
 highlighter: rouge
 sass:
   sass_dir: assets/scss
