removed /me from all urls

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # User config
 author: "Shirley Xiao"
-tagline: "Shirley Xiao"
+tagline: ""
 description: "Hi, I'm"
 keywords: "Shirley, Shirley Xiao, Xiao, Berkeley, Computer Science, CS, Cal, UC Berkeley, UCB, Software, Software Engineer, Software Developer"
 email: "stxiao@berkeley.edu"
