--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
 author: "Shirley Xiao"
 tagline: ""
-description: "Hi, I'm"
+description: ""
 keywords: "Shirley, Shirley Xiao, Xiao, Berkeley, Computer Science, CS, Cal, UC Berkeley, UCB, Software, Software Engineer, Software Developer"
 email: "stxiao@berkeley.edu"
 linkedin: "https://www.linkedin.com/in/s-xiao"
